--- a/src/app/ticket/ticket.component.css
+++ b/src/app/ticket/ticket.component.css
@@ -10,6 +10,10 @@
       animation: flash linear 1s infinite;
   }
 
+  .point {
+    cursor: pointer;
+  }
+
   @-webkit-keyframes flash {
 	0% { opacity: 1; } 
 	50% { opacity: .1; } 
