--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -181,6 +181,10 @@
                                 <div *ngIf="_toolSettings.SECTIONS.TICKET.TICKET_VIEW.ids.LETTER" class="tab-content-segment">
                                         <button (click)="actionSendToolBar(app.toolbarActivies.TICKET_LETTER)" class="button rounded">
                                             LETTER</button>
+                                            <br>
+                                            <button (click)="actionSendToolBar(app.toolbarActivies.TICKET_LETTER_ESIGN)" class="button rounded">
+                                                <i class="fa fa-pencil"></i> E SIGN
+                                            </button>
                                 </div>
   
                             </div>
