--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -15,8 +15,8 @@
     </div>
 </div> <!-- Confirmation Window -->
 
-
-<app-signature-pad *ngIf="showSignature" (close)="showSignature = false" [pdfFile]="pdfFile"></app-signature-pad>
+<app-letter-viewer *ngIf="showSignature" (close)="showSignature = false" [pdfFile]="pdfFile"></app-letter-viewer>
+<!-- <app-signature-pad *ngIf="showSignature" (close)="showSignature = false" [pdfFile]="pdfFile"></app-signature-pad> -->
 <app-dialog *ngIf="displayDialog" [ESIGN]="esign" (esignPDF)="pdfFile = $event; showSignature = true; displayDialog = false;" (send)="generateLetter($event)" (close)="displayDialog = false;" [attributes]="attributes"></app-dialog>
 <app-ticket-workflow *ngIf="displayWorkflow" [ticketid]="attributes.id_ticket" (onClose)="updateRoute($event);displayWorkflow = false;" [sentto]="attributes.sentto" [routing]="attributes.system_assign" [staffId]="attributes.started_ticket"></app-ticket-workflow>
 <app-file-uploader (changeConfig)="fileUploaderActions($event)" *ngIf="showFileUploader" [objectid]='attributes.id_ticket'></app-file-uploader>
