use new way of form display

--- a/src/app/ticket/dialog/dialog.component.html
+++ b/src/app/ticket/dialog/dialog.component.html
@@ -19,7 +19,7 @@
             </select>
         </div>
         <br>
-        <button class="button rounded" (click)="sendLetterRequest()">Submit</button>
+        <button [ngClass]="{'loading-cube': loading}"  class="button rounded" (click)="sendLetterRequest()">Submit</button>
     </div>
 </div>
 <!-- this div to handle the e sign with tablet -->
