--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -182,9 +182,9 @@
                                         <button (click)="actionSendToolBar(app.toolbarActivies.TICKET_LETTER)" class="button rounded">
                                             LETTER</button>
                                             <br>
-                                            <!-- <button (click)="actionSendToolBar(app.toolbarActivies.TICKET_LETTER_ESIGN)" class="button rounded">
+                                            <button (click)="actionSendToolBar(app.toolbarActivies.TICKET_LETTER_ESIGN)" class="button rounded">
                                                 <i class="fa fa-pencil"></i> E SIGN
-                                            </button> -->
+                                            </button>
                                 </div>
   
                             </div>
