--- a/src/app/letter-viewer/letter-viewer.component.html
+++ b/src/app/letter-viewer/letter-viewer.component.html
@@ -12,9 +12,10 @@
 
         <i class="fa fa-print" aria-hidden="true"></i>
     </button>
-    <button class="button" style="float: right;bottom: 4px;outline: none;margin-right: 28px;height: 1.5rem; min-height: 1.5rem">
-      <i class="fa fa-paperclip"></i></button>
-    <button class="class" style="float: right;bottom: 4px;outline: none;margin-right: 28px;height: 1.5rem; min-height: 1.5rem"><i class="fa fa-envelope-o"></i></button>
+    <button [ngClass]="{'loading-cube': attach_loading}" class="button" (click)="attachLetter();" style="float: right;bottom: 4px;outline: none;margin-right: 28px;height: 1.5rem; min-height: 1.5rem">
+      <i class="fa fa-paperclip"></i>
+    </button>
+    <button class="button" style="float: right;bottom: 4px;outline: none;margin-right: 28px;height: 1.5rem; min-height: 1.5rem"><i class="fa fa-envelope-o"></i></button>
     <span class="btn-close" (click)="onClose()" ></span>
   </div>
   <div class="window-content" [ngStyle]="{'height': height}" style="height: auto;">
