revolved the login compo

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,15 +6,15 @@
           <div style="position: absolute;top: 1.8px; z-index: 1000">
             <img src="assets/public_safety_logo.png" width="80" height="80" alt="">
           </div>
-          <h1 style="margin-left:90px;" class="text-light">SpartanMobile V3.5</h1>
+          <h1 style="margin-left:90px;" class="text-light">Spartan Pro V3.5</h1>
           <hr class="thin">
           <br>
           <div class="input-control text full-size" data-role="input">
               <label for="user_login">User email:</label>
-              <!-- <input [(ngModel)]="username" type="text" id="user_login" style="padding-right: 38px;" autofocus> -->
-              <select [(ngModel)]="username">
+              <input [(ngModel)]="username" type="text" id="user_login" style="padding-right: 38px;" autofocus>
+              <!-- <select [(ngModel)]="username">
                 <option *ngFor="let user of users">{{user.email}}</option>
-              </select>
+              </select> -->
               <button class="button helper-button clear" tabindex="-1" type="button"><i class="fa fa-times" aria-hidden="true"></i></button>
           </div>
           <br>
